<resources>
    <string name="app_name">视频</string>
    <string name="video">视频</string>
    <string name="baidu">百度</string>
    <string name="qishi">骑士</string>
    <string name="bdz">剥夺者</string>
    <string name="music">音乐</string>
    <string name="refresh">刷新</string>
    <string name="play">从网络播放视频</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
